temp fix on mobile pictures

--- a/css/index.css
+++ b/css/index.css
@@ -287,6 +287,12 @@ button:hover {
     font-size: 25px;
   }
 }
+body {
+  background-image: url("/img/pilates2.png"), url("/img/trainer2.png");
+  background-position: top right, top left;
+  background-repeat: no-repeat;
+  background-size: 434px;
+}
 .us {
   font-size: 40px;
 }
@@ -335,6 +341,19 @@ button:hover {
   .middle-info .usPics {
     margin-bottom: 20px;
     margin-top: 10px;
+  }
+}
+@media (max-width: 500px) {
+  nav {
+    margin-bottom: 300px;
+  }
+}
+@media (max-width: 500px) {
+  body {
+    background-image: url(/img/pilates2.png), url(/img/trainer2.png);
+    background-position: center top 13%;
+    background-repeat: no-repeat;
+    background-size: 410px, 0;
   }
 }
 body {
@@ -438,9 +457,20 @@ nav {
     font-size: 16px;
   }
 }
+@media (max-width: 1000px) {
+  body {
+    background-image: url(/img/pilates.png), url(/img/trainer.png);
+    background-position: top 5% right -3%, top 5% left -2%;
+    background-repeat: no-repeat;
+    background-size: 317px;
+  }
+}
 @media (max-width: 800px) {
   body {
-    background-size: 415px;
+    background-image: url(/img/pilates.png), url(/img/trainer.png);
+    background-position: top 7% right -2%, top 7% left -2%;
+    background-repeat: no-repeat;
+    background-size: 259px;
   }
 }
 @media (max-width: 800px) {
@@ -507,5 +537,18 @@ nav {
 @media (max-width: 500px) {
   .bottom-info .simple h3 {
     padding-bottom: 10px;
+  }
+}
+@media (max-width: 500px) {
+  body {
+    background-image: url(/img/pilates.png), url(/img/trainer.png);
+    background-position: center top 12%;
+    background-repeat: no-repeat;
+    background-size: 410px, 0;
+  }
+}
+@media (max-width: 500px) {
+  nav {
+    margin-bottom: 300px;
   }
 }
