--- a/less/home-page.less
+++ b/less/home-page.less
@@ -108,11 +108,23 @@ nav {
     }
     
 }
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     body {
-        background-size: 415px;
+        background-image: url(/img/pilates.png), url(/img/trainer.png);
+        background-position: top 5% right -3%, top 5% left -2%;
+        background-repeat: no-repeat;
+        background-size: 317px;
     }
 }
+@media (max-width: 800px) {
+    body {
+        background-image: url(/img/pilates.png), url(/img/trainer.png);
+        background-position: top 7% right -2%, top 7% left -2%;
+        background-repeat: no-repeat;
+        background-size: 259px;
+    }
+}
+
 @media (max-width: 800px) {
     .person h3 {
         font-size: 40px;
@@ -183,5 +195,19 @@ nav {
 @media (max-width: 500px) {
     .bottom-info .simple h3 {
         padding-bottom: 10px;
+    }
+}
+
+@media (max-width: 500px) {
+    body {
+        background-image: url(/img/pilates.png), url(/img/trainer.png);
+        background-position: center top 12%;
+        background-repeat: no-repeat;
+        background-size: 410px, 0;
+    }
+}
+@media (max-width: 500px) {
+    nav {
+        margin-bottom: 300px;
     }
 }
